Fixed: <li> icons on iOS/iPadOS/MacOS, color of phone number in footer, width of volunteering page

--- a/styles.css
+++ b/styles.css
@@ -385,3 +385,8 @@ address p {
 address img {
     margin-bottom: 30px;
 }
+
+address .phone-number {
+    text-decoration: none; 
+    color: inherit;
+}
